Se agregan atributos de boostrap y se hace algunas interacciones dinamicas con pseudocodigos en los enlaces

--- a/contacto.html
+++ b/contacto.html
@@ -10,19 +10,22 @@
     <link rel="prefetch" href="cursos.html" as="document">
     <link rel="preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
+     <!-- CSS only -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
         crossorigin="crossorigin" as="font">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="preload" href="css/css.css" as="style">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preload" href="img/blog1.jpg" as="image">
 </head>
 
 <body>
     <header class="header">
-        <div class="contenedor">
+        <div class="container">
             <div class="barra">
                 <a href="index.html" class="logo">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__blod">DeCafé</span></h1>
@@ -40,7 +43,7 @@
         </div>
     </header>
 
-    <main class="contenedor">
+    <main class="container">
         <h3 class="centrar-texto">Contacto</h3>
 
 
@@ -67,7 +70,7 @@
 
     </main>
     <footer class="footer">
-        <div class="contenedor">
+        <div class="container">
             <div class="barra">
                 <a href="index.html" class="logo">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__blod">DeCafé</span></h1>
