--- a/entrada.html
+++ b/entrada.html
@@ -15,14 +15,14 @@
         crossorigin="crossorigin" as="font">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="preload" href="css/css.css" as="style">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preload" href="img/blog1.jpg" as="image">
 </head>
 
 <body>
     <header class="header">
-        <div class="contenedor">
+        <div class="container">
             <div class="barra">
                 <a href="index.html" class="logo">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__blod">DeCafé</span></h1>
@@ -40,7 +40,7 @@
         </div>
     </header>
 
-    <main class="contenedor">
+    <main class="container">
         <h3 class="centrar-texto">Sobre nosotros</h3>
         <img src="img/blog1.jpg" alt="img del blog">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aspernatur nostrum ullam ducimus assumenda
@@ -81,7 +81,7 @@
             minima.</p>
     </main>
     <footer class="footer">
-        <div class="contenedor">
+        <div class="container">
             <div class="barra">
                 <a href="index.html" class="logo">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__blod">DeCafé</span></h1>
