--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog-Coffee</title>
+    <title>Coffee-Blog</title>
     <meta name="description" content="coffee blog website">
     <link rel="icon" href="img/logo-coffee.png">
     <link rel="prefetch" href="cursos.html" as="document">
     <link rel="preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
         crossorigin="crossorigin" as="font">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="preload" href="css/css.css" as="style">
-    <link rel="stylesheet" href="css/css.css">
-    <link rel="preload" href="img/blog1.jpg" as="image">
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preload" href="img/banner.webp" as="image">
+
 </head>
 
 <body>
     <header class="header">
-        <div class="contenedor">
+        <div class="container">
             <div class="barra">
                 <a href="index.html" class="logo">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__blod">DeCafé</span></h1>
@@ -41,17 +45,46 @@
         </div>
     </header>
 
-    <div class="contenedor contenido-principal">
+    <div class="container contenido-principal">
         <main class="blog">
             <h3>Nuestro Blog</h3>
             <article class="entrada">
-                <div class="entrada__imagen">
-                    <picture>
-                        <source loading="lazy" src="img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
-                    </picture>
+                <figure class="entrada__imagen">
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <picture>
+                                    <source loading="lazy" src="img/blog1.webp" type="image/webp">
+                                    <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
+                                </picture>
+                            </div>
+                            <div class="carousel-item">
+                                <picture>
+                                    <source loading="lazy" src="img/blog2.webp" type="image/webp">
+                                    <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
+                                </picture>
+                            </div>
+                            <div class="carousel-item">
+                                <picture>
+                                    <source loading="lazy" src="img/blog3.webp" type="image/webp">
+                                    <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
+                                </picture>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </figure>
 
-                </div>
+
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Tipos De Granos y Cafe</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nam quisquam illo aliquid pariatur
@@ -62,12 +95,40 @@
             </article>
 
             <article class="entrada">
-                <div class="entrada__imagen">
-                    <picture>
-                        <source loading="lazy" src="img/blog2.webp" type="image/webp">
-                        <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
-                    </picture>
-                </div>
+                <figure class="entrada__imagen">
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <picture>
+                                    <source loading="lazy" src="img/blog4.webp" type="image/webp">
+                                    <img loading="lazy" src="img/blog4.jpg" alt="imagen blog" >
+                                </picture>
+                            </div>
+                            <div class="carousel-item">
+                                <picture>
+                                    <source loading="lazy" src="img/blog5.webp" type="image/webp">
+                                    <img loading="lazy" src="img/blog5.jpg" alt="imagen blog">
+                                </picture>
+                            </div>
+                            <div class="carousel-item">
+                                <picture>
+                                    <source loading="lazy" src="img/blog6.webp" type="image/webp">
+                                    <img loading="lazy" src="img/blog6.jpg" alt="imagen blog">
+                                </picture>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </figure>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Tres Deliciosas Recetas De Cafe</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nam quisquam illo aliquid pariatur
@@ -79,10 +140,7 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <picture>
-                        <source loading="lazy" src="img/blog3.webp" type="image/webp">
-                        <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
-                    </picture>
+                    <iframe width="1200" height="531.57" src="https://www.youtube.com/embed/v53EqVCs4xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  ></iframe>
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Beneficios Del Cafe</h4>
@@ -125,7 +183,8 @@
         </aside>
     </div>
     <footer class="footer">
-        <div class="contenedor">
+
+        <div class="container">
             <div class="barra">
                 <a href="index.html" class="logo">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__blod">DeCafé</span></h1>
@@ -139,7 +198,12 @@
         </div>
 
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <script src="js/modernizr.js"></script>
+
 </body>
 
 </html>
